Replace spaces example

--- a/book_chapter1/index.html
+++ b/book_chapter1/index.html
@@ -26,12 +26,14 @@
   <div class="button-column">
     <button onclick="task1()">Check Unique (string1)</button>
     <button onclick="task2()">Check Permutation (string1), (string2)</button>
+    <button onclick="task3()">Replace spaces example</button>
   </div>
 
   <pre id="output"></pre>
 
   <!-- Load external JS task scripts -->
   <script src="task1_uniqueSymbols.js"></script>
-  <script src="task2_permutation_string.js"></script>
+  <script src="task2_permutationString.js"></script>
+  <script src="task3_replaceSpaces.js"></script>
 </body>
 </html>
