--- a/book_chapter1/index.html
+++ b/book_chapter1/index.html
@@ -27,6 +27,7 @@
     <button onclick="task1()">Check Unique (string1)</button>
     <button onclick="task2()">Check Permutation (string1), (string2)</button>
     <button onclick="task3()">Replace spaces example</button>
+    <button onclick="task4()">Check Palindrome Permutation (string1)</button>
   </div>
 
   <pre id="output"></pre>
@@ -35,5 +36,6 @@
   <script src="task1_uniqueSymbols.js"></script>
   <script src="task2_permutationString.js"></script>
   <script src="task3_replaceSpaces.js"></script>
+  <script src="task4_isPalindromePermutation.js"></script>
 </body>
 </html>
