count edit distance

--- a/book_chapter1/index.html
+++ b/book_chapter1/index.html
@@ -28,6 +28,7 @@
     <button onclick="task2()">Check Permutation (string1), (string2)</button>
     <button onclick="task3()">Replace spaces example</button>
     <button onclick="task4()">Check Palindrome Permutation (string1)</button>
+    <button onclick="task5()">Count Edit Distance (string1), (string2)</button>
   </div>
 
   <pre id="output"></pre>
@@ -37,5 +38,6 @@
   <script src="task2_permutationString.js"></script>
   <script src="task3_replaceSpaces.js"></script>
   <script src="task4_isPalindromePermutation.js"></script>
+  <script src="task5_countEditDistance.js"></script>
 </body>
 </html>
