task 6 compress string

--- a/book_chapter1/index.html
+++ b/book_chapter1/index.html
@@ -29,6 +29,7 @@
     <button onclick="task3()">Replace spaces example</button>
     <button onclick="task4()">Check Palindrome Permutation (string1)</button>
     <button onclick="task5()">Count Edit Distance (string1), (string2)</button>
+    <button onclick="task6()">Compress String (string1)</button>
   </div>
 
   <pre id="output"></pre>
@@ -39,5 +40,6 @@
   <script src="task3_replaceSpaces.js"></script>
   <script src="task4_isPalindromePermutation.js"></script>
   <script src="task5_countEditDistance.js"></script>
+  <script src="task6_compressString.js"></script>
 </body>
 </html>
