--- a/book_chapter1/index.html
+++ b/book_chapter1/index.html
@@ -34,6 +34,12 @@
 
   <pre id="output"></pre>
 
+  <h2>Matrix Task</h2>
+  <textarea id="inputMatrix" rows="5" cols="30" placeholder="Enter matrix, rows separated by newlines, numbers by spaces"></textarea>
+  <br />
+  <button onclick="task7()">Rotate Matrix</button>
+  <pre id="matrixOutput"></pre>
+
   <!-- Load external JS task scripts -->
   <script src="task1_uniqueSymbols.js"></script>
   <script src="task2_permutationString.js"></script>
@@ -41,5 +47,6 @@
   <script src="task4_isPalindromePermutation.js"></script>
   <script src="task5_countEditDistance.js"></script>
   <script src="task6_compressString.js"></script>
+  <script src="task7_rotateMatrix.js"></script>
 </body>
 </html>
