--- a/book_chapter1/index.html
+++ b/book_chapter1/index.html
@@ -35,7 +35,9 @@
   <pre id="output"></pre>
 
   <h2>Matrix Task</h2>
-  <textarea id="inputMatrix" rows="5" cols="30" placeholder="Enter matrix, rows separated by newlines, numbers by spaces"></textarea>
+  <textarea id="inputMatrix" rows="5" cols="30" placeholder="Enter matrix, rows separated by newlines, numbers by spaces">1 2 3
+4 5 6
+7 8 9</textarea>
   <br />
   <button onclick="task7()">Rotate Matrix</button>
   <pre id="matrixOutput"></pre>
