--- a/book_chapter1/index.html
+++ b/book_chapter1/index.html
@@ -34,12 +34,13 @@
 
   <pre id="output"></pre>
 
-  <h2>Matrix Task</h2>
+  <h2>Matrix Tasks</h2>
   <textarea id="inputMatrix" rows="5" cols="30" placeholder="Enter matrix, rows separated by newlines, numbers by spaces">1 2 3
 4 5 6
 7 8 9</textarea>
   <br />
   <button onclick="task7()">Rotate Matrix</button>
+  <button onclick="task8()">Set Zeros</button>
   <pre id="matrixOutput"></pre>
 
   <!-- Load external JS task scripts -->
@@ -50,5 +51,6 @@
   <script src="task5_countEditDistance.js"></script>
   <script src="task6_compressString.js"></script>
   <script src="task7_rotateMatrix.js"></script>
+  <script src="task8_setZeros.js"></script>
 </body>
 </html>
