is rotation task

--- a/book_chapter1/index.html
+++ b/book_chapter1/index.html
@@ -30,6 +30,7 @@
     <button onclick="task4()">Check Palindrome Permutation (string1)</button>
     <button onclick="task5()">Count Edit Distance (string1), (string2)</button>
     <button onclick="task6()">Compress String (string1)</button>
+    <button onclick="task9()">Is Rotation (string1), (string2)</button>
   </div>
 
   <pre id="output"></pre>
@@ -52,5 +53,6 @@
   <script src="task6_compressString.js"></script>
   <script src="task7_rotateMatrix.js"></script>
   <script src="task8_setZeros.js"></script>
+  <script src="task9_isRotation.js"></script>
 </body>
 </html>
