Move inline styles to external stylesheet for better maintainability

--- a/book_chapter1/index.html
+++ b/book_chapter1/index.html
@@ -3,84 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>JS Tasks</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Arial, sans-serif;
-      background: #f6f8fa;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 700px;
-      margin: 2em auto;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 2px 12px rgba(0,0,0,0.08);
-      padding: 2em;
-    }
-    h1, h2 {
-      text-align: center;
-      color: #2d3748;
-    }
-    .card {
-      background: #f1f5f9;
-      border-radius: 8px;
-      padding: 1.5em;
-      margin-bottom: 1.5em;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.04);
-    }
-    .inputs {
-      display: flex;
-      gap: 1em;
-      margin-bottom: 1em;
-    }
-    input, textarea {
-      font-size: 1em;
-      padding: 0.5em;
-      border-radius: 4px;
-      border: 1px solid #cbd5e1;
-      background: #fff;
-      width: 100%;
-      box-sizing: border-box;
-    }
-    textarea {
-      resize: vertical;
-    }
-    .button-column {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 0.5em;
-      margin-bottom: 1em;
-    }
-    .button-column button {
-      background: #2563eb;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      padding: 0.5em 1em;
-      font-size: 1em;
-      cursor: pointer;
-      transition: background 0.2s;
-      box-shadow: 0 1px 2px rgba(0,0,0,0.04);
-    }
-    .button-column button:hover {
-      background: #1e40af;
-    }
-    .output, .matrix-output {
-      background: #e0e7ef;
-      border-radius: 4px;
-      padding: 1em;
-      min-height: 2em;
-      font-family: 'Fira Mono', 'Consolas', monospace;
-      color: #334155;
-      margin-top: 0.5em;
-      white-space: pre-wrap;
-    }
-    .error {
-      color: #dc2626;
-      font-weight: bold;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
